Fix cm-page scrollbars showing all the time

--- a/src/components/cm-page/cm-page.scss
+++ b/src/components/cm-page/cm-page.scss
@@ -46,5 +46,6 @@ header {
 
 .tabs {
 	padding: 40px 65px;
-	overflow: scroll;
+	height: 100%;
+	overflow: auto;
 }
